src/BlazorUI/Demo/Client/Shared/Shared/Header.razor.scss
@import '../Styles/abstracts/_vars.scss';
@import '../Styles/abstracts/_colors.scss';
@import '../Styles/bit-css-variables.scss';
@import '../Styles/abstracts/_functions.scss';
@import '../Styles/abstracts/_media-queries.scss';

.header {
    top: 0;
    width: 100%;
    z-index: 11;
    position: fixed;
    backdrop-filter: blur(20px);
    box-shadow: $bit-box-shadow-1;
    -webkit-backdrop-filter: blur(20px);
    transition: top 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.header--full-page {
    .container {
        max-width: rem(1200px);
    }
}

.container {
    width: 100%;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    align-items: center;
    flex-flow: row nowrap;
    box-sizing: border-box;
    padding-left: rem(20px);
    padding-right: rem(20px);
    min-height: rem($HeaderHeight);
    justify-content: space-between;

    @include lt-lg {
        padding: 0 rem(10px);
    }
}

.content {
    height: 100%;
    display: flex;
    align-items: center;
    flex-flow: row nowrap;
}

.logo {
    cursor: pointer;
    width: rem(50px);
    height: rem(50px);
    margin-right: rem(30px);
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    background-image: url('images/bit-logo.svg');

    @include lt-lg {
        margin: 0 rem(10px);
    }
}

.link {
    height: 100%;
    cursor: pointer;
    line-height: 1.5;
    padding-bottom: 0;
    padding: rem(10px);
    font-size: rem(16px);
    text-decoration: none;
    box-sizing: border-box;
    color: $bit-color-foreground-secondary;
}

.link--active {
    color: $B2Color;
}

.right-section {
    gap: 1rem;
    display: flex;
    align-items: center;
}

.github-btn {
    cursor: pointer;
    width: rem(40px);
    height: rem(40px);
    border-radius: 50%;
    margin-left: rem(10px);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-image: url('images/github-icon.webp');
}

::deep {
    .menu-btn {
        @include gt-md {
            display: none;
        }
    }

    .toggle-theme-btn {
        padding: 0;
        height: 35px;
        min-width: 35px;
        border-radius: 50%;
        color: $bit-color-primary-text;
        background-color: $bit-color-primary-main;
    }

    .fix-light-icon {
        span {
            padding: 3px 0px 0 1px;
        }
    }
}

